Fix ReactiveGatherers downstream push propagation, null/exception/timestamp handling, and expand tests